[package]
name = "meridian-plugin"
version = "0.1.5"
edition = "2021"
authors = ["Meridian Team"]
description = "Advanced plugin system for Meridian GIS Platform with dynamic loading, WASM runtime, and security"
license = "MIT OR Apache-2.0"
repository = "https://github.com/meridian/meridian-gis"
keywords = ["plugin", "gis", "wasm", "dynamic-loading"]
categories = ["development-tools", "wasm"]

[dependencies]
# Dynamic library loading
libloading = "0.8"

# WASM runtime
wasmtime = "15.0"
wasmtime-wasi = "15.0"

# Async runtime
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Cryptography for signing
ring = "0.17"
ed25519-dalek = "2.1"
sha2 = "0.10"
hex = "0.4"
rand = "0.8"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Version management
semver = { version = "1.0", features = ["serde"] }

# UUID generation
uuid = { version = "1.6", features = ["v4", "serde"] }

# File watching for hot-reload
notify = "6.1"

# Inter-process communication
crossbeam-channel = "0.5"

# Resource limits
rlimit = "0.10"

# HTTP client for marketplace
reqwest = { version = "0.11", features = ["json", "multipart"] }

# URL parsing
url = "2.5"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Collection utilities
dashmap = "5.5"

# Parking lot for faster mutexes
parking_lot = "0.12"

[dev-dependencies]
tempfile = "3.8"
criterion = "0.5"

[lib]
name = "meridian_plugin"
path = "src/lib.rs"

