[package]
name = "meridian-realtime"
version = "0.2.5"
edition = "2021"
authors = ["Meridian GIS Platform Team"]
description = "Real-time collaboration and synchronization for Meridian GIS Platform"
license = "MIT OR Apache-2.0"
repository = "https://github.com/meridian/meridian-realtime"
keywords = ["gis", "realtime", "websocket", "crdt", "collaboration"]
categories = ["network-programming", "web-programming::websocket", "concurrency"]

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
tokio-util = "0.7"

# Web framework and WebSocket
axum = { version = "0.7", features = ["ws", "macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors", "compression-full"] }
tungstenite = "0.21"
tokio-tungstenite = "0.21"

# Redis for pub/sub and state
redis = { version = "0.24", features = ["tokio-comp", "connection-manager", "cluster"] }
deadpool-redis = "0.14"

# Serialization (binary protocol)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rmp-serde = "1.1"  # MessagePack
bincode = "1.3"

# Time and UUIDs
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Concurrency and sync
dashmap = "5.5"
parking_lot = "0.12"
arc-swap = "1.6"

# Crypto for end-to-end encryption
ring = "0.17"
aes-gcm = "0.10"
chacha20poly1305 = "0.10"
x25519-dalek = "2.0"
ed25519-dalek = "2.1"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Tracing and metrics
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
metrics = "0.21"

# Geospatial
geo = "0.27"
geojson = "0.24"

# Utilities
bytes = "1.5"
futures = "0.3"
async-trait = "0.1"
derive_more = "0.99"

[dev-dependencies]
tokio-test = "0.4"
criterion = "0.5"
proptest = "1.4"
quickcheck = "1.0"

[lib]
name = "meridian_realtime"
path = "src/lib.rs"
